# top_projet

./: .clang-format  .cmake-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  config.txt  pyproject.toml  ref_results.raw
cmake/: third-party.cmake  tpl.hpp.in  tpl_loader.hpp.in
include/lbm/: communications.hpp  config.hpp  initialization.hpp  lib.hpp  mpi.hpp  physics.hpp  structures.hpp
src/lbm/: CMakeLists.txt  communications.cpp  config.cpp  initialization.cpp  physics.cpp  structures.cpp
src/lbm_viz/: __main__.py  display.py  generator.py  gnuplot.py
