[project]
name = "lbm-viz"
version = "0.1.0"
description = "Visualize LBM simulation results as animated GIFs"
requires-python = ">=3.10"
dependencies = ["psutil", "rich", "tqdm"]

[project.scripts]
lbm-viz = "lbm_viz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lbm_viz"]
